# BF_BigRLab

./: .gitignore  Makefile  test.conf  test.sh
algorithms/RunCmd/: CMakeLists.txt  RunCmd.thrift  RunCmdServiceHandler.cpp  RunCmdServiceHandler.h  main.cpp
algorithms/RunCmd/gen-cpp/: AlgCommon_constants.h  RunCmdService.cpp  RunCmdService.h  RunCmdService.tcc  RunCmd_constants.cpp  RunCmd_constants.h  RunCmd_types.cpp  RunCmd_types.h  RunCmd_types.tcc
algorithms/kenlm/test/: AnnDB.hpp  ArticleServiceHandler.cpp  ArticleServiceHandler.h  CMakeLists.txt  StringTrie.hpp  article.thrift  demo.cpp  jieba.hpp  ngram_model.hpp  trie.hpp
algorithms/kenlm/test/gen-cpp/: ArticleService.cpp  ArticleService.h  ArticleService.tcc  article_types.cpp  article_types.h  article_types.tcc
algorithms/knn/: CMakeLists.txt  KnnServiceHandler.cpp  KnnServiceHandler.h  Makefile  WordAnnDB.cpp  WordAnnDB.h  knn.thrift  main.cpp
algorithms/knn/gen-cpp/: AlgCommon_types.tcc  KnnService.h  KnnService.tcc  knn_constants.cpp  knn_constants.h  knn_types.cpp  knn_types.h
algorithms/tagging2/test/: AnnDB.hpp  Article2Vector.cpp  Article2Vector.h  ArticleServiceHandler.cpp  ArticleServiceHandler.h  BuildClusterIdx.cpp  CMakeLists.txt  ClusterPredict.cpp  ClusterPredict.h  WordClusterDB.cpp  WordClusterDB.h  article.thrift  concur_table.hpp  demo.cpp  jieba.hpp
algorithms/tagging2/test/gen-cpp/: ArticleService.cpp  ArticleService.h  ArticleService.tcc  article_types.cpp  article_types.h  article_types.tcc
algorithms/warplda1/src/: Bigraph.hpp  CMakeLists.txt  TopicModule.h  TopicServiceHandler.h  lda.cpp  topics.thrift  topics_svr.cpp  warplda.cpp  warplda.hpp
algorithms/warplda1/src/gen-cpp/: TopicService.cpp  TopicService.tcc  topics_types.cpp  topics_types.h  topics_types.tcc
api_server/: CMakeLists.txt  Makefile  alg_mgr.cpp  alg_mgr.thrift  api_server.cpp  api_server.h  common_utils.h  demo.sh  main.cpp  service.h  service_manager.cpp  service_manager.h  stream_buf.h  test.sh  work_mgr.h
api_server/gen-cpp/: AlgMgrService.cpp  AlgMgrService.h  alg_mgr_constants.cpp  alg_mgr_types.cpp  alg_mgr_types.h  alg_mgr_types.tcc
api_server/gen-py/BigRLab/: AlgMgrService.py  __init__.py  ttypes.py
others/FeatureProject/: CMakeLists.txt
others/FeatureProject/data/: adult_conf.json  adult_conf_updated.json  join.cpp  test.py
others/FeatureProject/src/: CommDef.h  Feature.cpp  Feature.h  FeatureHandle.hpp  FeatureInfo.h  example.thrift  main.cpp  test.cpp
others/FeatureProject/src/gen-cpp/: example_constants.cpp  example_constants.h  example_types.cpp  example_types.h  example_types.tcc
others/FeatureProject/test/: gen_json.cpp
others/FeatureProject2/: CMakeLists.txt
others/FeatureProject2/common/: Feature.cpp  Feature.h  FeatureTask.cpp  FeatureTask.h  FeatureVector.thrift  FvFile.cpp  FvFile.h
others/FeatureProject2/common/gen-cpp/: FeatureVector_constants.cpp  FeatureVector_constants.h  FeatureVector_types.cpp  FeatureVector_types.h  FeatureVector_types.tcc
others/FeatureProject2/common/utils/: read_cmd.cpp  read_cmd.h  read_sep.hpp
others/FeatureProject2/data/: adult_conf.json  adult_desc.json  gen_id.py  gen_test_data.sh  search_conf.json  student_conf.json  test.py
others/FeatureProject2/data/iv_woe_test/: data_desc.json
others/FeatureProject2/data1/: adult_conf.json
others/FeatureProject2/deprecated/format_output_concur/: CMakeLists.txt  FormatOutput.cpp
others/FeatureProject2/deprecated/iv_woe_1/: IvWoe.cpp
others/FeatureProject2/deprecated/iv_woe_mt/: IvWoe.cpp  IvWoe.h
others/FeatureProject2/deprecated/normalize/: normalize.cpp  normalize.h
others/FeatureProject2/deprecated/raw2fv/: CMakeLists.txt  raw2fv.cpp
others/FeatureProject2/deprecated/raw2fv_mt2/: CMakeLists.txt
others/FeatureProject2/docs/iv_woe/: iv.sas.cpp
others/FeatureProject2/libs/: CMakeLists.txt
others/FeatureProject2/libs/article2vec/: CMakeLists.txt  article2vec.cpp
others/FeatureProject2/libs/article2vec_proxy/: Article2VecProxy.cpp  Article2VecProxy.h  CMakeLists.txt
others/FeatureProject2/libs/build_index/: BuildIndex.cpp  BuildIndex.h  CMakeLists.txt
others/FeatureProject2/libs/format_output/: CMakeLists.txt  FormatOutput.cpp  FormatOutput.h
others/FeatureProject2/libs/format_output_concur/: FormatOutput.cpp  FormatOutput.h
others/FeatureProject2/libs/iv_woe/: IvWoe.cpp
others/FeatureProject2/libs/merge_dense/: CMakeLists.txt  MergeDense.cpp
others/FeatureProject2/libs/normalize/: CMakeLists.txt  normalize.cpp  normalize.h
others/FeatureProject2/libs/raw2fv/: CMakeLists.txt  raw2fv.cpp  raw2fv.h
others/FeatureProject2/main/: CMakeLists.txt  gen_data_desc.cpp  main.cpp
others/FeatureProject2/src/common/: CommDef.h  Feature.h  FeatureTask.cpp  FvFile.cpp  FvFile.h  ThriftFile.hpp  shared_queue.hpp
others/FeatureProject2/src/common/gen-cpp/: FeatureVector_constants.h  FeatureVector_types.cpp  FeatureVector_types.tcc
others/FeatureProject2/src/common/utils/: read_sep.hpp  str2time.hpp
others/FeatureProject2/src/libs/: concur_table.hpp
others/FeatureProject2/src/libs/PhoneType/: CMakeLists.txt  PhoneType.cpp  PhoneType.h
others/FeatureProject2/src/libs/article2vec_proxy/: Article2VecProxy.h  CMakeLists.txt
others/FeatureProject2/src/libs/build_index/: BuildIndex.cpp  BuildIndex.h
others/FeatureProject2/src/libs/discrete/: CMakeLists.txt  Discrete.cpp  (+1 more)
others/FeatureProject2/src/main/: CMakeLists.txt  gen_data_desc.cpp  main.cpp  main_fun.h
others/FeatureProject2/unused/article2vec/: article2vec.cpp
others/FeatureProject2/wm_data/: singlevalue.json
others/FeatureProject2/wm_data/modeldata/: desc.json
others/SemanticTree/: CMakeLists.txt
others/SemanticTree/src/: SemanticTree.cpp  SemanticTree.h  main.cpp
services/RunCmd/: AlgConfig.cpp  AlgConfig.h  CMakeLists.txt  KnnConfig.cpp  KnnConfig.h  RunCmdServiceSo.cpp  RunCmdServiceSo.h  XgBoostConfig.cpp  XgBoostConfig.h
services/topics_update/: CMakeLists.txt  Makefile  article_service.cpp  article_service.h
services/warplda/: CMakeLists.txt  Makefile  topic_service.cpp  topic_service.h
(+336 files in other folders)
